syntax = "proto3";

package greeter;

// This tells Go where to generate and import code from
// option go_package = "seng513-202501-group-27/gen/;greeter";
option go_package = "./;greeter";
service Greeter { rpc SayHello(HelloRequest) returns (HelloReply); }

message HelloRequest { string name = 1; }

message HelloReply { string message = 1; }
